# tsubuyaki

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  NOTICE.md  README.ja.md  README.md  README.vi.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-recovery.txt  requirements.txt
backend/src/furigana_aid/: __init__.py  config.py  device.py  main.py  model_source.py  neural.py  runtime.py
backend/src/furigana_aid/api/: dependencies.py  endpoints.py  schemas.py
backend/src/furigana_aid/artifacts/: __init__.py  loader.py  manifest.py
backend/src/furigana_aid/inference/: __init__.py  context_window.py  engine.py  features.py  hybrid.py  ruby_alignment.py  segments.py
backend/tests/: conftest.py
backend/tests/unit/: test_api.py  test_artifact_loader.py  test_config.py  test_context_window_core.py  test_features_core.py  test_frontend_contract.py  test_hybrid_core.py  test_ruby_alignment_core.py  test_segments_core.py
docker/: Dockerfile.gpu
docs/: ARCHITECTURE.md  BENCHMARK.md  DEPLOY.md  DEPLOY_EN.md  LIMITATIONS.md  MODEL_LIMITATIONS.md  PHASE1.md  SECURITY.md  UPSTREAM.md
frontend/: index.html  manifest.json  service-worker.js
frontend/tests-or-test-harness/: test.html
scripts/: benchmark_inference.py  convert_mlp_to_safetensors.py  hf_upload.py  recover_phase0_artifacts.py
